Fix entity browser vertical spacing and pager layout.
Make the page layout horizontal rather than vertical and add vertical spacing between elements.

--- a/scss/components/_entity_browser.scss
+++ b/scss/components/_entity_browser.scss
@@ -4,6 +4,7 @@
 
   .views-row {
     margin-right: 1.333%;
+    margin-bottom: 1rem;
     width: 32%;
   }
 
@@ -36,6 +37,18 @@
   .form-actions {
     clear: both;
     padding: 0.5rem;
+  }
+
+  .pager {
+    ul {
+      margin: 0 auto;
+      width: 50%;
+
+      li {
+        display: inline-block;
+
+      }
+    }
   }
 }
 
